@@ -28,10 +28,10 @@
 typedef @SKSTREAM_SOCKLEN_TYPE@ SOCKLEN;
 typedef @SKSTREAM_SOCKET_TYPE@ SOCKET_TYPE;
 
-#if @SKSTREAM_WINDOWS_HEADERS@
+#if @SKSTREAM_WINDOWS_HEADER_FLAG@
   // No windows headers required yet.
 #endif
-#if @SKSTREAM_UNIX_HEADERS@
+#if @SKSTREAM_UNIX_HEADER_FLAG@
   #include <sys/types.h>
   #include <sys/socket.h>
   #include <netinet/in.h>
@@ -42,7 +42,7 @@ typedef @SKSTREAM_SOCKET_TYPE@ SOCKET_TYPE;
 
   #define closesocket(x) close(x)
 #endif
-#if @SKSTREAM_BEOS_HEADERS@
+#if @SKSTREAM_BEOS_HEADER_FLAG@
   #include <net/socket.h>
   #include <net/netdb.h>
   #include <errno.h>
